<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/setting"

            android:title="@string/setting"></item>
        <item android:id="@+id/value"
            android:icon="@drawable/ic_euro_symbol_black_24px"
            android:title="@string/value"></item>
    </group>
    <item android:id="@+id/personal" android:icon="@drawable/ic_manager" android:title="@string/personal">
        <menu>
            <item android:title="@string/child"
                android:icon="@drawable/ic_child_friendly_black_24dp"
                android:id="@+id/child"></item>
            <item android:title="@string/exit"
                android:icon="@drawable/ic_exit"
                android:id="@+id/exit"></item>
        </menu>
    </item>
</menu>